<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:animateLayoutChanges="true"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/start_time"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/report_time_picker_text_view"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/rounded_edit_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/series_number"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/series_number_input"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:inputType="number"
        android:maxLength="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/rounded_edit_text"
        android:windowSoftInputMode="stateHidden"
        />

    <Button
        android:id="@+id/setup_daily_report_time_button"
        android:text="@string/setup"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/card_view_background"
        android:textColor="@color/button_action_color"
        />

    <Button
        android:id="@+id/inquiry_daily_report_time_button"
        android:text="@string/inquiry"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/card_view_background"
        android:textColor="@color/button_action_color"
        />

    <Button
        android:id="@+id/delete_daily_report_time_button"
        android:text="@string/delete"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/card_view_background"
        android:textColor="@color/button_action_color"
        />

</LinearLayout>