<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/date_picker_text_view"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/rounded_edit_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/time"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/time_picker_text_view"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/rounded_edit_text"
        />

    <Button
        android:id="@+id/set_rtu_time_button"
        android:text="@string/set_time"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/card_view_background"
        android:textColor="@color/button_action_color"
        />

</LinearLayout>