<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:animateLayoutChanges="true"
    >

    <LinearLayout
        android:id="@+id/access_time_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/start_date"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/start_date_picker_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_edit_text"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/start_time"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/start_time_picker_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_edit_text"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/end_date"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/end_date_picker_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_edit_text"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/end_time"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/end_time_picker_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_edit_text"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/series_number"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/series_number_input"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:inputType="number"
        android:maxLength="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/rounded_edit_text"
        android:windowSoftInputMode="stateHidden"
        />

    <CheckBox
        android:id="@+id/access_always_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/access_always"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/authorize_user_number_button"
        android:text="@string/setup"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/card_view_background"
        android:textColor="@color/button_action_color"
        />

    <Button
        android:id="@+id/inquiry_user_number_button"
        android:text="@string/inquiry"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/card_view_background"
        android:textColor="@color/button_action_color"
        />

    <Button
        android:id="@+id/delete_user_number_button"
        android:text="@string/delete"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/card_view_background"
        android:textColor="@color/button_action_color"
        />

</LinearLayout>