<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:focusableInTouchMode="true"
    android:focusable="true"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/new_password"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/rounded_edit_text"
        android:windowSoftInputMode="stateHidden"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/confirm_password_t"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/rounded_edit_text"
        android:windowSoftInputMode="stateHidden"
        />

    <Button
        android:id="@+id/change_password_button"
        android:text="@string/modify_password"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/card_view_background"
        android:textColor="@color/button_action_color"
        />

</LinearLayout>